--- a/App.xaml
+++ b/App.xaml
@@ -103,7 +103,7 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="30 0"/>
+            <Setter Property="Margin" Value="0"/>
         </Style>
 
         <Style TargetType="Label" x:Key="DetailsBindingLabel">
@@ -116,39 +116,27 @@
         </Style>
         
         <Style x:Key="ColumnHeader" TargetType="GridViewColumnHeader">
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="False">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="20 0 0 0" Padding="0" HorizontalAlignment="Left"/>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                    <Setter Property="Padding" Value="0"></Setter>
-                    <Setter Property="Margin" Value="0 10"></Setter>
-                </Trigger>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                <TextBlock Text="{TemplateBinding Content}" FontWeight="Bold" FontSize="16" Background="White" Margin="20 0 0 0" Padding="0" HorizontalAlignment="Left"/>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                    <Setter Property="Padding" Value="0"></Setter>
-                    <Setter Property="Margin" Value="0 10"></Setter>
-                </Trigger>
-            </Style.Triggers>
-
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                        <Border BorderThickness="0" BorderBrush="White" Background="White">
+                            <TextBlock Text="{TemplateBinding Content}" Width="{TemplateBinding Width}" FontWeight="Bold" FontSize="16" Background="White" Margin="20 0 0 0" Padding="0" HorizontalAlignment="Left"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Padding" Value="0"></Setter>
+            <Setter Property="Margin" Value="0 10"></Setter>
         </Style>
         
+        
         <Style TargetType="ListView" x:Key="ListViewStyle">
+            <Setter Property="IsSynchronizedWithCurrentItem" Value="True"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
 
         <Style TargetType="ListViewItem">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="Background" Value="White" />
             <Setter Property="BorderBrush" Value="White" />
             <Setter Property="BorderThickness" Value="0" />
