--- a/View/Details/CourseDetailsWindow.xaml
+++ b/View/Details/CourseDetailsWindow.xaml
@@ -38,7 +38,7 @@
 
         </Grid>
           <StackPanel Grid.Row="2" Width="844" Margin="180 0">
-        <ListView x:Name="ListViewUczestnicy" Grid.Row="2" ItemsSource="{Binding Uczestnicy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, BindsDirectlyToSource=True}" Style="{StaticResource ListViewStyle}" ItemContainerStyle="{StaticResource ListViewItemNotSelected}">
+        <ListView x:Name="ListViewUczestnicy" Grid.Row="2" ItemsSource="{Binding Uczestnicy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource ListViewStyle}" ItemContainerStyle="{StaticResource ListViewItemNotSelected}">
 
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
@@ -60,9 +60,8 @@
                     <GridViewColumn Width="280" Header="Ocena końcowa" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                    <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding Path=NowaOcena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, BindsDirectlyToSource=True}">
-                                    <ComboBoxItem>Brak</ComboBoxItem>
-                                    <ComboBoxItem>2</ComboBoxItem>
+                                    <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding NowaOcena}">
+                                        <ComboBoxItem>2</ComboBoxItem>
                                     <ComboBoxItem>3</ComboBoxItem>
                                     <ComboBoxItem>3.5</ComboBoxItem>
                                     <ComboBoxItem>4</ComboBoxItem>
@@ -75,7 +74,7 @@
                         <GridViewColumn Width="280" Header="Obecna Ocena" HeaderContainerStyle="{StaticResource ColumnHeader}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding ObecnaOcena, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                    <TextBlock Text="{Binding ObecnaOcena}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
