--- a/View/Details/CourseDetailsWindow.xaml
+++ b/View/Details/CourseDetailsWindow.xaml
@@ -42,7 +42,7 @@
 
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
-                    <GridViewColumn Width="220" Header="Imię" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                    <GridViewColumn Width="160" Header="Imię" HeaderContainerStyle="{StaticResource ColumnHeader}">
 
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
@@ -50,17 +50,17 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="280" Header="Nazwisko" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                    <GridViewColumn Width="140" Header="Nazwisko" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Nazwisko}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="280" Header="Ocena końcowa" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                    <GridViewColumn Width="280" Header="Wystaw ocenę" HeaderContainerStyle="{StaticResource ColumnHeader}">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                    <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding NowaOcena}">
+                                    <ComboBox x:Name="ComboBoxOcena" Style="{StaticResource ComboBox}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding NowaOcena}" HorizontalAlignment="Left">
                                         <ComboBoxItem>2</ComboBoxItem>
                                     <ComboBoxItem>3</ComboBoxItem>
                                     <ComboBoxItem>3.5</ComboBoxItem>
@@ -71,7 +71,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                        <GridViewColumn Width="280" Header="Obecna Ocena" HeaderContainerStyle="{StaticResource ColumnHeader}">
+                        <GridViewColumn Width="220" Header="Ocena końcowa" HeaderContainerStyle="{StaticResource ColumnHeader}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding ObecnaOcena}" />
